--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -8,7 +8,12 @@
       </mat-form-field>
     </div>
 
-    <mat-paginator #paginator [length]="_plantData.length" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]">
+
+    <mat-paginator #paginator 
+                   [length]="_plantData.length"
+                   [pageIndex]="0"
+                   [pageSize]="10"
+                   [pageSizeOptions]="[5, 10, 25, 100]">
     </mat-paginator>
 
     <mat-table #table [dataSource]="tableSource">
