--- a/src/app/table-demo/table-demo.component.css
+++ b/src/app/table-demo/table-demo.component.css
@@ -1,34 +1,42 @@
-.demo-data-source-actions > div {
+/* Structure so that the table is contained on a card */
+.table-container {
+  display: flex;
+  flex-direction: column;
+}
+.table-container mat-table {
+  overflow: auto;
+}
+.data-source-actions > div {
   margin: 16px 0;
 }
-.demo-data-source-actions .demo-track-by-select {
+.data-source-actions .track-by-select {
   display: flex;
   align-items: center;
 }
-.demo-data-source-actions .demo-track-by-select .demo-track-by-label {
+.data-source-actions .track-by-select .track-by-label {
   margin-right: 8px;
 }
-.demo-data-source-actions .demo-highlighter .mat-checkbox {
+.data-source-actions .highlighter .mat-checkbox {
   margin: 0 8px;
 }
-.demo-row-highlight-first {
+.row-highlight-first {
   background: #f3f315;
 }
-.demo-row-highlight-last {
+.row-highlight-last {
   background: #0dd5fc;
 }
-.demo-row-highlight-even {
+.row-highlight-even {
   background: #f09;
 }
-.demo-row-highlight-odd {
+.row-highlight-odd {
   background: #83f52c;
 }
-.demo-table-card {
+.table-card {
   margin: 24px 0;
   max-height: 450px;
   overflow: auto;
 }
-.demo-table-card h3 {
+.table-card h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -59,17 +67,8 @@
 .cdk-table .cdk-header-cell.mat-sort-header-sorted {
   color: black;
 }
-.demo-mat-table-example table-header-demo {
+.mat-table-example table-header-demo {
   background: white;
-}
-/* Structure so that the table is contained on a card */
-.demo-table-container {
-  max-height: 800px;
-  display: flex;
-  flex-direction: column;
-}
-.demo-table-container mat-table {
-  overflow: auto;
 }
 /* Column max widths */
 .cdk-column-userId {
@@ -86,16 +85,16 @@
 .cdk-column-progress.cdk-cell, .cdk-column-progress.mat-cell {
   display: flex;
 }
-.cdk-column-progress.cdk-cell .demo-progress-stat, .cdk-column-progress.mat-cell .demo-progress-stat {
+.cdk-column-progress.cdk-cell .progress-stat, .cdk-column-progress.mat-cell .progress-stat {
   width: 32px;
   padding-right: 8px;
 }
-.cdk-column-progress.cdk-cell .demo-progress-indicator-container, .cdk-column-progress.mat-cell .demo-progress-indicator-container {
+.cdk-column-progress.cdk-cell .progress-indicator-container, .cdk-column-progress.mat-cell .progress-indicator-container {
   flex-grow: 1;
   display: flex;
   align-items: center;
 }
-.cdk-column-progress.cdk-cell .demo-progress-indicator, .cdk-column-progress.mat-cell .demo-progress-indicator {
+.cdk-column-progress.cdk-cell .progress-indicator, .cdk-column-progress.mat-cell .progress-indicator {
   border-radius: 8px;
   height: 8px;
 }
