break for submission to TopCoder

--- a/src/app/table-demo/table-demo.component.html
+++ b/src/app/table-demo/table-demo.component.html
@@ -1,11 +1,4 @@
-<h3>MatTable With MatTableDataSource Example</h3>
-
-<mat-form-field>
-  <input matInput [formControl]="filter">
-</mat-form-field>
-
 <div class="table-container mat-table-example">
-
   <mat-table 
     [dataSource]="matTableDataSource" 
     [trackBy]="userTrackBy" 
@@ -13,11 +6,20 @@
     #sortForDataSource="matSort">
 
     <!-- Column Definition: Name -->
+    <ng-container matColumnDef="arrow">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"><img src="../../assets/images/icon-right-{{ row.yieldData[4].value > 70 ? 'green' : 'red' }}.png" alt="arrow right"></mat-cell>
+    </ng-container>
+    
+    <!-- Column Definition: Name -->
     <ng-container matColumnDef="location">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
         Plant Name
       </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.location}} </mat-cell>
+      <mat-cell *matCellDef="let row"> 
+        <a (click)="onClick(row.location)" (mouseenter)="hoverOn($event, row.location)" (mouseleave)="hoverOff($event)">{{row.location}}</a>
+      </mat-cell>
     </ng-container>
 
     <!-- Column Definition: Color -->
@@ -34,11 +36,13 @@
                        mat-sort-header>
         Yield
       </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.yieldData}} </mat-cell>
+      <mat-cell *matCellDef="let row" class="{{ row.yieldData[4].value > 70 ? 'accent' : 'warn' }}"> {{ row.yieldData[4].value }} %</mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;
+                         let first = first; let last = last; let even = even; let odd = odd"
+             [class.row-highlight-even]="even" ></mat-row>
 
   </mat-table>
 
@@ -46,3 +50,8 @@
                  [length]="_plantDatabase.data.length"
                  [pageSizeOptions]="[10, 25, 50, 100]">
   </mat-paginator>
+
+
+<mat-form-field>
+  <input matInput [formControl]="filter">
+</mat-form-field>
