--- a/src/app/table-demo/table-demo.component.css
+++ b/src/app/table-demo/table-demo.component.css
@@ -2,9 +2,12 @@
 .table-container {
   display: flex;
   flex-direction: column;
+  margin-top: 170px;
+  padding: 0 30px;
 }
 .table-container mat-table {
   overflow: auto;
+  padding: 20px;
 }
 .data-source-actions > div {
   margin: 16px 0;
@@ -26,7 +29,7 @@
   background: #0dd5fc;
 }
 .row-highlight-even {
-  background: #f09;
+  background: #fcfcfc;
 }
 .row-highlight-odd {
   background: #83f52c;
@@ -70,7 +73,20 @@
 .mat-table-example table-header-demo {
   background: white;
 }
+
 /* Column max widths */
+.mat-column-yieldData {
+  justify-content: flex-end;
+  text-align: right;
+  font-weight: 600;
+}
+
+.mat-column-arrow {
+  max-width: 32px;
+  justify-content: flex-end;
+  padding-top: 4px;
+}
+
 .cdk-column-userId {
   max-width: 32px;
   justify-content: flex-end;
@@ -97,4 +113,20 @@
 .cdk-column-progress.cdk-cell .progress-indicator, .cdk-column-progress.mat-cell .progress-indicator {
   border-radius: 8px;
   height: 8px;
+}
+
+.mat-row, .mat-header-row {
+    border-bottom: none;
+}
+
+
+.red-tooltip {
+  background-color: rgb(255, 128, 128)!important;
+  color: black;
+}
+
+.white-tooltip {
+  width: 400px;
+  color: black;
+  background-color: white;
 }
