--- a/src/theme.scss
+++ b/src/theme.scss
@@ -61,6 +61,9 @@ html, body, #map, agm-map {
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: #f3f3f3;
+}
 #map {
   position: absolute;
   z-index: 1;
@@ -426,9 +429,23 @@ hr {
 .mat-form-field {
   font-size: 14px;
   flex-grow: 1;
-  margin-left: 32px;
 }
 
 .mat-table {
   overflow: auto;
+}
+
+.mat-sort-header-arrow {
+  color: $primary;
+}
+.mat-sort-header-stem {
+  background: none!important;
+}
+.mat-sort-header-container {
+  justify-content: inherit;
+}
+.mat-dialog-container {
+  -webkit-box-shadow: -1px 0px 14px -2px rgba(0,0,0,0.10)!important;
+  -moz-box-shadow: -1px 0px 14px -2px rgba(0,0,0,0.10)!important;
+  box-shadow: -1px 0px 14px -2px rgba(0,0,0,0.10)!important;
 }
