--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,22 +13,20 @@
 
       <mat-form-field class="example-full-width">
         <input class="mat-body-1" type="search" matInput placeholder="Plant Search" #searchBox id="search-box" (keyup)="search(searchBox.value)">
-        <input />
         
         <mat-icon class="search-icon" matSuffix>search</mat-icon>
       </mat-form-field>
 
       <div>
         <div *ngFor="let plant of plants | async"
-            (click)="gotoDetail(hero)" class="search-result" >
-          {{hero.name}}
+            (click)="getPlantDetails(plant)" class="search-result" >
+          {{plant.location}}
         </div>
       </div>
 
     </div>
     
   </span>
-
 
   <mat-icon class="nav-icon">notifications_none</mat-icon>
 
