--- a/src/app/table-demo/table-demo.component.html
+++ b/src/app/table-demo/table-demo.component.html
@@ -27,7 +27,7 @@
           [popperShowOnStart]="false" 
           [popperTrigger]="'hover'" 
           [popperPlacement]="'right'"
-          (click)="onClick(row.location)">
+          (click)="onClick(row.id)">
           {{row.location}}
         </div>
         
