--- a/src/theme.scss
+++ b/src/theme.scss
@@ -479,23 +479,21 @@ hr {
   box-shadow: -1px 0px 14px -2px rgba(0,0,0,0.150)!important;
 }
 
-.search-result{
-  border-bottom: 1px solid gray;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
-  width:195px;
-  height: 16px;
-  padding: 5px;
-  background-color: white;
-  cursor: pointer;
+.search-results-wrapper {
+    border: none;
+    width: 320px;
+    padding: 15px 0 32px 20px;
+    background-color: white;
+    cursor: pointer;
+    margin-left: -20px;
 }
  
+.search-result {
+  height: 30px;
+}
+
 .search-result:hover {
   color: #eee;
   background-color: #607D8B;
 }
  
-#search-box{
-  width: 200px;
-  height: 20px;
-}
